# LlamaFasterTransformer

./: CMakeLists.txt  checkpoints.json  download.py  ds-inference-test.py  element_wise.cu  gpt2neox.ipynb  inference-test.py  test.py  utils.py
examples/cpp/gptj/: gptj_config.ini  gptj_example.cc  start_ids.csv
examples/cpp/gptneox/: gptneox_config.ini  gptneox_example.cc  start_ids.csv
examples/cpp/llama/: CMakeLists.txt  llama_config.ini  llama_example.cc  llama_triton_example.cc  start_ids.csv  stop_words.csv
examples/cpp/multi_gpu_gpt/: gpt_config.ini  start_ids.csv
examples/pytorch/bert/: bert_example.py
examples/pytorch/bert/utils/: encoder.py
examples/pytorch/gpt/: gpt_example.py  run.sh
examples/pytorch/gpt/utils/: gpt.py  gpt_decoder.py  huggingface_opt_convert.py  nemo_ckpt_convert.py
examples/pytorch/llama/: huggingface_llama_convert.py
src/fastertransformer/kernels/: CMakeLists.txt  activation_kernels.cu  activation_kernels.h
src/fastertransformer/layers/: CMakeLists.txt  FfnLayer.cc  FfnLayer.h  FfnWeight.h  TensorParallelLlamaGeluFfnLayer.cc  TensorParallelLlamaGeluFfnLayer.h
src/fastertransformer/triton_backend/: CMakeLists.txt  transformer_triton_backend.hpp
src/fastertransformer/triton_backend/llama/: CMakeLists.txt  LlamaTritonModel.cc  LlamaTritonModel.h  LlamaTritonModelInstance.cc  LlamaTritonModelInstance.h
src/fastertransformer/utils/: cublasMMWrapper.cc  cublasMMWrapper.h  memory_utils.cu
tests/int8_gemm/: CMakeLists.txt  Makefile
tests/int8_gemm/unittests/: Makefile  cmake_install.cmake
(+22 files in other folders)
